deployments/anakonda/service.yml
apiVersion: v1
kind: Service
metadata:
  name: anakonda
  labels:
    app.kubernetese.io/name: anakonda
    app.kubernetese.io/part-of: anakonda
    app.kubernetese.io/project: anakonda
    app.kubernetese.io/env: test
spec:
  type: ClusterIP
  selector: 
    app.kubernetese.io/name: anakonda
    app.kubernetese.io/part-of: anakonda
    app.kubernetese.io/project: anakonda
    app.kubernetese.io/env: test
  ports:
    - name: http
      port: 80
      targetPort: 8080
